WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
227615
animation-fill-mode does not correctly apply viewport-based units
https://bugs.webkit.org/show_bug.cgi?id=227615
Summary
animation-fill-mode does not correctly apply viewport-based units
Will Harris
Reported
2021-07-02 03:14:48 PDT
If an animation is applied with an "animation-fill-mode", and the values in the first/last animation frame are expressed using viewport units (vw, vh), the affected element will not be correctly positioned if the viewport is subsequently resized after the animation has ended (e.g. desktop browser when resizing, mobile browser when orientation is changed). The attached test case reduction shows the issue. It contains three divs, all positioned with viewport units: - one reference div, unanimated - one div animated without "animation-fill-mode" - one div animated with "animation-fill-mode" The animated divs share the same animation and CSS positioning. The only difference is that the last div's animation also uses a fill mode. When the browser window is resized, the top two divs move correctly, and remain aligned with a reference marker line. The last div does not move as expected to respect the changed viewport size.
Attachments
Add attachment
proposed patch, testcase, etc.
Will Harris
Comment 1
2021-07-02 03:16:16 PDT
Chrome and Firefox show what I would consider the correct behaviour.
Radar WebKit Bug Importer
Comment 2
2021-07-02 03:23:53 PDT
<
rdar://problem/80075191
>
Smoley
Comment 3
2021-07-15 13:23:19 PDT
It looks like the test case failed to attach. Please try adding it again.
Will Harris
Comment 4
2021-07-16 06:40:50 PDT
Sorry, test case added in the URL field:
https://will.harris.ch/tcr-animation-fill-mode.html
Antoine Quint
Comment 5
2021-09-08 07:38:50 PDT
Thanks for filing this., I can reproduce the issue with STP 131.
Ahmad Saleem
Comment 6
2024-02-16 01:24:59 PST
It is still reproducible in STP188 using attached test case where while animation is running, if you change window size, the last div is stuck.
Ahmad Saleem
Comment 7
2026-03-25 02:02:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61312
EWS
Comment 8
2026-03-26 11:46:39 PDT
Committed
310007@main
(243e5fe708ed): <
https://commits.webkit.org/310007@main
> Reviewed commits have been landed. Closing PR #61312 and removing active labels.
Ahmad Saleem
Comment 9
2026-03-26 15:14:32 PDT
Submitted web-platform-tests pull request:
https://github.com/web-platform-tests/wpt/pull/58793
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug