Source/WebCore/style/StyleScope.cpp
@@ -58,6 +58,7 @@
 #include "SVGStyleElement.h"
 #include "Settings.h"
 #include "ShadowRoot.h"
+#include "StyleableInlines.h"
 #include "StyleBuilder.h"
 #include "StyleCustomPropertyRegistry.h"
 #include "StyleInvalidator.h"
@@ -908,8 +909,9 @@ void Scope::didChangeViewportSize()
 
     // FIXME: Ideally, we should save the list of elements that have viewport units and only iterate over those.
     for (RefPtr element = ElementTraversal::firstWithin(rootNode); element; element = ElementTraversal::nextIncludingPseudo(*element)) {
+        bool styleableHasViewportUnitAnimation = Styleable::fromElement(*element).viewportSizeDidChange();
         auto* renderer = element->renderer();
-        if (renderer && renderer->style().usesViewportUnits())
+        if (styleableHasViewportUnitAnimation || (renderer && renderer->style().usesViewportUnits()))
             element->invalidateStyle();
     }
 }
